transformer interface finally working

--- a/src/main/resources/assets/mekanismrepowered/lang/en_us.json
+++ b/src/main/resources/assets/mekanismrepowered/lang/en_us.json
@@ -9,5 +9,5 @@
     "block.mekanismrepowered.transformer_interface": "Transformer Interface",
     "block.mekanismrepowered.transformer_io": "Transformer I/O",
 
-    "creativetab.mekanismrepowered_tab": "Mekanism: Repowered Tab"
+    "creativetab.mekanismrepowered_tab": "Mekanism: Repowered"
 }
