added all leftover items

--- a/src/main/resources/assets/mekanismrepowered/lang/en_us.json
+++ b/src/main/resources/assets/mekanismrepowered/lang/en_us.json
@@ -4,6 +4,46 @@
     "item.mekanismrepowered.hv_coil": "HV Coil",
     "item.mekanismrepowered.vhv_coil": "VHV Coil",
     "item.mekanismrepowered.ev_coil": "EV Coil",
+    "item.mekanismrepowered.basic_rod": "Basic Rod",
+    "item.mekanismrepowered.advanced_rod": "Advanced Rod",
+    "item.mekanismrepowered.elite_rod": "Elite Rod",
+    "item.mekanismrepowered.ultimate_rod": "Ultimate Rod",
+    "item.mekanismrepowered.extreme_rod": "Extreme Rod",
+    "item.mekanismrepowered.copper_spool": "Copper Spool",
+    "item.mekanismrepowered.steel_spool": "Steel Spool",
+    "item.mekanismrepowered.diamond_spool": "Diamond Spool",
+    "item.mekanismrepowered.glow_spool": "Glow Spool",
+    "item.mekanismrepowered.refined_spool": "Refined Spool",
+    "item.mekanismrepowered.copper_wire": "Copper Wire",
+    "item.mekanismrepowered.steel_wire": "Steel Wire",
+    "item.mekanismrepowered.diamond_wire": "Diamond Wire",
+    "item.mekanismrepowered.refined_glowstone_wire": "Refined Glowstone Wire",
+    "item.mekanismrepowered.refined_wire": "Refined Wire",
+    "item.mekanismrepowered.compounded_ingot": "Compounded Ingot",
+    "item.mekanismrepowered.dust_refined_glowstone": "Refined Glowstone Dust",
+    "item.mekanismrepowered.extreme_control_circuit": "Extreme Control Circuit",
+    "item.mekanismrepowered.refined_glowstone_compound": "Refined Glowstone Compound",
+    "item.mekanismrepowered.unstable_alloy": "Unstable Alloy",
+    "item.mekanismrepowered.blank_template": "Blank Template",
+    "item.mekanismrepowered.sun_template": "Sun Template",
+    "item.mekanismrepowered.mercury_template": "Mercury Template",
+    "item.mekanismrepowered.venus_template": "Venus Template",
+    "item.mekanismrepowered.moon_template": "Moon Template",
+    "item.mekanismrepowered.mars_template": "Mars Template",
+    "item.mekanismrepowered.jupiter_template": "Jupiter Template",
+    "item.mekanismrepowered.saturn_template": "Saturn Template",
+    "item.mekanismrepowered.uranus_template": "Uranus Template",
+    "item.mekanismrepowered.neptune_template": "Neptune Template",
+    "item.mekanismrepowered.pluto_template": "Pluto Template",
+    "item.mekanismrepowered.k_168f_template": "Keppler 168f Template",
+    "item.mekanismrepowered.k_452b_template": "Keppler 452b Template",
+    "item.mekanismrepowered.proxima_centauri_b_template": "Proxima Centauri B Template",
+    "item.mekanismrepowered.gliese_667cc_template": "Gliese 667Cc Template",
+    "item.mekanismrepowered.a51_pegasi_b_template": "51 Pegasi B Template",
+    "item.mekanismrepowered.a55_cancri_e_template": "55 Cancri E Template",
+    "item.mekanismrepowered.hd_189733b_template": "HD 189733b Template",
+    "item.mekanismrepowered.ross_128b_template": "Ross 128b Template",
+    "item.mekanismrepowered.k_22b_template": "Keppler 22b Template",
 
     "block.mekanismrepowered.transformer_casing": "Transformer Casing",
     "block.mekanismrepowered.transformer_interface": "Transformer Interface",
