--- a/src/main/resources/assets/mekanismrepowered/lang/en_us.json
+++ b/src/main/resources/assets/mekanismrepowered/lang/en_us.json
@@ -85,28 +85,28 @@
     "infuse_type.mekanismrepowered.infused_infested_stone": "Infused Infested Stone",
     "infuse_type.mekanismrepowered.dense_diamond": "Dense Diamond",
 
-    "advancements.mekanismrepowered.zap.title": "Zap!",
-    "advancements.mekanismrepowered.zap.description": "Make a basic rod",
-    "advancements.mekanismrepowered.power.title": "Power!",
-    "advancements.mekanismrepowered.power.description": "Make a basic voltage rod",
-    "advancements.mekanismrepowered.more_power.title": "More Power!",
-    "advancements.mekanismrepowered.more_power.description": "Make an advanced voltage rod",
-    "advancements.mekanismrepowered.more.title": "More!",
-    "advancements.mekanismrepowered.more.description": "Make an elite voltage rod",
-    "advancements.mekanismrepowered.more2.title": "MORE!",
-    "advancements.mekanismrepowered.more2.description": "Make an ultimate voltage rod",
-    "advancements.mekanismrepowered.more3.title": "M O R E !",
-    "advancements.mekanismrepowered.more3.description": "Make an extreme voltage rod",
-    "advancements.mekanismrepowered.unlimited_power.title": "Unlimited Power!",
-    "advancements.mekanismrepowered.unlimited_power.description": "Make both an extreme voltage rod and an extreme efficiency cube",
-    "advancements.mekanismrepowered.your_poor_friends.title": "Your poor friends :(",
-    "advancements.mekanismrepowered.your_poor_friends.description": "Turn 4 of your friends into a space miner",
-    "advancements.mekanismrepowered.mining_on_other_worlds.title": "Mining on other worlds",
-    "advancements.mekanismrepowered.mining_on_other_worlds.description": "Place down a space miner",
-    "advancements.mekanismrepowered.pissing_on_the_moon.title": "Pissing on the moon [not finished]",
-    "advancements.mekanismrepowered.pissing_on_the_moon.description": "Use the space miner and acquire an item",
-    "advancements.mekanismrepowered.this_baby_can_store_energy_for_miles.title": "This baby can store energy for miles!",
-    "advancements.mekanismrepowered.this_baby_can_store_energy_for_miles.description": "Make an extreme energy cube [not finished]",
-    "advancements.mekanismrepowered.pound_me.title": "Pound me",
-    "advancements.mekanismrepowered.pound_me.description": "Create a compound ingot"
+    "advancements.zap.title": "Zap!",
+    "advancements.zap.description": "Make a basic rod",
+    "advancements.power.title": "Power!",
+    "advancements.power.description": "Make a basic voltage rod",
+    "advancements.more_power.title": "More Power!",
+    "advancements.more_power.description": "Make an advanced voltage rod",
+    "advancements.more.title": "More!",
+    "advancements.more.description": "Make an elite voltage rod",
+    "advancements.more2.title": "MORE!",
+    "advancements.more2.description": "Make an ultimate voltage rod",
+    "advancements.more3.title": "M O R E !",
+    "advancements.more3.description": "Make an extreme voltage rod",
+    "advancements.unlimited_power.title": "Unlimited Power!",
+    "advancements.unlimited_power.description": "Make both an extreme voltage rod and an extreme efficiency cube",
+    "advancements.your_poor_friends.title": "Your poor friends :(",
+    "advancements.your_poor_friends.description": "Turn 4 of your friends into a space miner",
+    "advancements.mining_on_other_worlds.title": "Mining on other worlds",
+    "advancements.mining_on_other_worlds.description": "Place down a space miner",
+    "advancements.pissing_on_the_moon.title": "Pissing on the moon [not finished]",
+    "advancements.pissing_on_the_moon.description": "Use the space miner and acquire an item",
+    "advancements.this_baby_can_store_energy_for_miles.title": "This baby can store energy for miles!",
+    "advancements.this_baby_can_store_energy_for_miles.description": "Make an extreme energy cube [not finished]",
+    "advancements.pound_me.title": "Pound me",
+    "advancements.pound_me.description": "Create a compound ingot"
 }
