implemented space miner v1

--- a/src/main/resources/assets/mekanismrepowered/lang/en_us.json
+++ b/src/main/resources/assets/mekanismrepowered/lang/en_us.json
@@ -44,6 +44,7 @@
     "item.mekanismrepowered.hd_189733b_template": "HD 189733b Template",
     "item.mekanismrepowered.ross_128b_template": "Ross 128b Template",
     "item.mekanismrepowered.k_22b_template": "Keppler 22b Template",
+    "item.mekanismrepowered.ball_of_fire": "Ball of Fire",
 
     "block.mekanismrepowered.transformer_casing": "Transformer Casing",
     "block.mekanismrepowered.transformer_interface": "Transformer Interface",
