working on achievements

--- a/src/main/resources/assets/mekanismrepowered/lang/en_us.json
+++ b/src/main/resources/assets/mekanismrepowered/lang/en_us.json
@@ -95,10 +95,10 @@
     "advancements.more_power.descr": "Make an advanced voltage rod",
     "advancements.more.title": "More!",
     "advancements.more.descr": "Make an elite voltage rod",
-    "advancements.more2.title": "MORE!",
-    "advancements.more2.descr": "Make an ultimate voltage rod",
-    "advancements.more3.title": "M O R E !",
-    "advancements.more3.descr": "Make an extreme voltage rod",
+    "advancements.more_2.title": "MORE!",
+    "advancements.more_2.descr": "Make an ultimate voltage rod",
+    "advancements.more_3.title": "M O R E !",
+    "advancements.more_3.descr": "Make an extreme voltage rod",
     "advancements.unlimited_power.title": "Unlimited Power!",
     "advancements.unlimited_power.descr": "Make both an extreme voltage rod and an extreme efficiency cube",
     "advancements.your_poor_friends.title": "Your poor friends :(",
